--- a/men_women.html
+++ b/men_women.html
@@ -7,23 +7,24 @@
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-  <title>our closet</title>
+  <title>In progress Final project</title>
 </head>
 <body>
   <!-- <a href ="mobile.html">mobile</a>
   <a href ="web.html">web</a> -->
-  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
-  <img src="assets/landing.png" alt="closet" width="100%" height="100%">
-<br>
-<br>
 
-  <center><a href="men_women.html" class="button button1">Start Scanning</a></center>
-
-  <footer>
-    <center><p>
+<a href ="index.html"><img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%"></a>
+  <center><h1>Which Closet You Like to Open?
+  </h1></center>
   <br>
-  our closet©</p></center>
-  </footer>
+  <center><a href="Men_top_vs_bottom.html" class="button button1">Men Closet</a> <a href="women_top_vs_bottom.html" class="button button1">Women Closet</a></center>
+
+<br>
+<footer>
+  <center><p>
+  <a href="index.html" class="button button2">⬅<br></a><br>
+our closet©</p></center>
+</footer>
 <!-- <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
