--- a/men_bottom.html
+++ b/men_bottom.html
@@ -6,25 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
-  <title>our closet</title>
+  <title>In progress Final project</title>
 </head>
 <body>
-  <!-- <a href ="mobile.html">mobile</a>
-  <a href ="web.html">web</a> -->
-  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
-  <img src="assets/landing.png" alt="closet" width="100%" height="100%">
-<br>
-<br>
-
-  <center><a href="men_women.html" class="button button1">Start Scanning</a></center>
-
-  <footer>
-    <center><p>
-  <br>
-  our closet©</p></center>
-  </footer>
-<!-- <button type="button" onclick="init()">Start</button>
+  <div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -34,7 +20,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./my_model/";
+    const URL = "./my_model_2/";
     var img;
     var img2;
     var img3;
@@ -74,24 +60,28 @@
         window.requestAnimationFrame(loop);
     }
 
+    function getConnectedDevices(type, callback) {
+        navigator.mediaDevices.enumerateDevices()
+            .then(devices => {
+                const filtered = devices.filter(device => device.kind === type);
+                callback(filtered);
+            });
+    }
+
+    getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
+
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
-        if(prediction[0].className == "WhiteShirt" && prediction[0].probability.toFixed(2) == 1.00){
+        if(prediction[0].className == "BlueJeans" && prediction[0].probability.toFixed(2) == 1.00){
           img2 = '<img src = "assets/cody2.png">';
-          labelContainer.childNodes[0].innerHTML = img2 + "With Hoodie, wear THIS"
-        } else if(prediction[1].className == "GrayShirt" && prediction[1].probability.toFixed(2) == 1.00){
+          labelContainer.childNodes[0].innerHTML = img2 + "With BlueJeans, wear THIS"
+        } else if(prediction[1].className == "BlackSlacks" && prediction[1].probability.toFixed(2) == 1.00){
             img = '<img src = "assets/cody1.png">';
           labelContainer.childNodes[0].innerHTML = img + "You have Bike Jacket, wear THIS"
 
-        } else if(prediction[2].className == "HighNeckKnit" && prediction[2].probability.toFixed(2) == 1.00){
-            img3 = '<img src = "assets/cody3.png">';
-            labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-          } else if(prediction[3].className == "Hoodie" && prediction[3].probability.toFixed(2) == 1.00){
-              img3 = '<img src = "assets/cody3.png">';
-              labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-            } else {
+        } else {
               labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
           }
 
@@ -103,8 +93,12 @@
     }
 
 
-</script> -->
+</script>
 
-
+<footer>
+  <center><p>
+  <a href="men_top_vs_bottom.html" class="button button2">⬅<br></a><br>
+our closet©</p></center>
+</footer>
   </body>
   </html>
