--- a/men_jacket.html
+++ b/men_jacket.html
@@ -6,27 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
-  <title>our closet</title>
+  <title>In progress Final project</title>
 </head>
 <body>
-  <!-- <a href ="mobile.html">mobile</a>
-  <a href ="web.html">web</a> -->
   <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
-  <img src="assets/landing.png" alt="closet" width="100%" height="100%">
-<br>
-<br>
-
-  <center><a href="men_women.html" class="button button1">Start Scanning</a></center>
-
-  <footer>
-    <center><p>
-  <br>
-  our closet©</p></center>
-  </footer>
-<!-- <button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
+<center><button type="button" onclick="init()">Start Scanning</button>
 <div id="label-container"></div>
+<div id="webcam-container"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -34,7 +21,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./my_model/";
+    const URL = "./my_model_3/";
     var img;
     var img2;
     var img3;
@@ -68,30 +55,41 @@
         }
     }
 
-    async function loop() {
-        webcam.update(); // update the webcam frame
-        await predict();
-        window.requestAnimationFrame(loop);
-    }
+
+
+    function getConnectedDevices(type, callback) {
+    navigator.mediaDevices.enumerateDevices()
+        .then(devices => {
+            const filtered = devices.filter(device => device.kind === type);
+            callback(filtered);
+        });
+}
+
+getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
+
+
+async function loop() {
+    webcam.update();
+    await predict();
+    window.requestAnimationFrame(loop);
+
+}
 
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
-        if(prediction[0].className == "WhiteShirt" && prediction[0].probability.toFixed(2) == 1.00){
-          img2 = '<img src = "assets/cody2.png">';
-          labelContainer.childNodes[0].innerHTML = img2 + "With Hoodie, wear THIS"
-        } else if(prediction[1].className == "GrayShirt" && prediction[1].probability.toFixed(2) == 1.00){
-            img = '<img src = "assets/cody1.png">';
+        if(prediction[0].className == "ShortBrownJacket" && prediction[0].probability.toFixed(2) == 1.00){
+          img2 = '<img src = "assets/post3.png">';
+          labelContainer.childNodes[0].innerHTML = img2 + "With this jacket, wear THIS"
+        } else if(prediction[1].className == "BikeriderJacket" && prediction[1].probability.toFixed(2) == 1.00){
+            img = '<img src = "assets/post1.png">';
           labelContainer.childNodes[0].innerHTML = img + "You have Bike Jacket, wear THIS"
 
-        } else if(prediction[2].className == "HighNeckKnit" && prediction[2].probability.toFixed(2) == 1.00){
-            img3 = '<img src = "assets/cody3.png">';
-            labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-          } else if(prediction[3].className == "Hoodie" && prediction[3].probability.toFixed(2) == 1.00){
-              img3 = '<img src = "assets/cody3.png">';
-              labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-            } else {
+        } else if(prediction[2].className == "LongCoat" && prediction[2].probability.toFixed(2) == 1.00){
+            img3 = '<img src = "assets/post2.png">';
+            labelContainer.childNodes[0].innerHTML = img3 +    "With that Long Coat, wear THIS"
+          }  else {
               labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
           }
 
@@ -103,8 +101,12 @@
     }
 
 
-</script> -->
-
+</script></center>
+<footer>
+  <center><p>
+  <a href="men_top_vs_bottom.html" class="button button2">⬅<br></a><br>
+our closet©</p></center>
+</footer>
 
   </body>
   </html>
