--- a/men_top.html
+++ b/men_top.html
@@ -6,25 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
-  <title>our closet</title>
+  <title>In progress Final project</title>
 </head>
 <body>
-  <!-- <a href ="mobile.html">mobile</a>
-  <a href ="web.html">web</a> -->
-  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
-  <img src="assets/landing.png" alt="closet" width="100%" height="100%">
-<br>
-<br>
-
-  <center><a href="men_women.html" class="button button1">Start Scanning</a></center>
-
-  <footer>
-    <center><p>
-  <br>
-  our closet©</p></center>
-  </footer>
-<!-- <button type="button" onclick="init()">Start</button>
+  <div>Teachable Machine Image Model</div>
+<button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -73,6 +59,15 @@
         await predict();
         window.requestAnimationFrame(loop);
     }
+    function getConnectedDevices(type, callback) {
+        navigator.mediaDevices.enumerateDevices()
+            .then(devices => {
+                const filtered = devices.filter(device => device.kind === type);
+                callback(filtered);
+            });
+    }
+
+    getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
 
     // run the webcam image through the image model
     async function predict() {
@@ -103,8 +98,12 @@
     }
 
 
-</script> -->
+</script>
 
-
+<footer>
+  <center><p>
+  <a href="men_women.html" class="button button2">⬅<br></a><br>
+our closet©</p></center>
+</footer>
   </body>
   </html>
