--- a/Men_top_vs_bottom.html
+++ b/Men_top_vs_bottom.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-  <title>In progress Final project</title>
+  <title>our closet</title>
 </head>
 <body>
   <!-- <a href ="mobile.html">mobile</a>
