--- a/men_bottom.html
+++ b/men_bottom.html
@@ -6,13 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-  <title>In progress Final project</title>
+  <title>our closet</title>
 </head>
 <body>
-  <div>Teachable Machine Image Model</div>
-<button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
+  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
+  <center><button type="button" onclick="init()">Start Scanning</button>
+  <div id="label-container"></div>
+  <div id="webcam-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -75,11 +75,11 @@
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
         if(prediction[0].className == "BlueJeans" && prediction[0].probability.toFixed(2) == 1.00){
-          img2 = '<img src = "assets/cody2.png">';
-          labelContainer.childNodes[0].innerHTML = img2 + "With BlueJeans, wear THIS"
+          img2 = '<img src = "assets/post8.png">';
+          labelContainer.childNodes[0].innerHTML = img2
         } else if(prediction[1].className == "BlackSlacks" && prediction[1].probability.toFixed(2) == 1.00){
-            img = '<img src = "assets/cody1.png">';
-          labelContainer.childNodes[0].innerHTML = img + "You have Bike Jacket, wear THIS"
+            img = '<img src = "assets/post9.png">';
+          labelContainer.childNodes[0].innerHTML = img
 
         } else {
               labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
