--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <br>
 <br>
 
-  <center><a href="men_women.html" class="button button1">Start Scanning</a></center>
+  <center><a href="men_women.html" class="button button1">Start Scanning with Web</a><a href="men_women_m.html" class="button button1">Start Scanning with Mobile</a></center>
+
 
   <footer>
     <center><p>
