--- a/women_bottom2_m.html
+++ b/women_bottom2_m.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 
-  <title>In progress Final project</title>
+  <title>our closet</title>
 </head>
 <body>
   <!-- <a href ="mobile.html">mobile</a>
@@ -17,12 +17,12 @@
   <center><h1>Which Closet You Like to Open?
   </h1></center>
   <br>
-  <center><a href="Men_top_vs_bottom_m.html" class="button button1">Men Closet</a> <a href="women_top_vs_bottom_m.html" class="button button1">Women Closet</a></center>
+  <center><a href="women_bottom_m.html" class="button button1">Bottom Closet</a> <a href="women_skirt_m.html" class="button button1">Skirt Closet</a></center>
 
 <br>
 <footer>
   <center><p>
-  <a href="index.html" class="button button2">⬅<br></a><br>
+  <a href="women_top_vs_bottom_m.html" class="button button2">⬅<br></a><br>
 our closet©</p></center>
 </footer>
 <!-- <button type="button" onclick="init()">Start</button>
