--- a/women_top_m.html
+++ b/women_top_m.html
@@ -6,28 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="styles.css">
   <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
-
-  <title>In progress Final project</title>
-</head>
-<body>
-  <!-- <a href ="mobile.html">mobile</a>
-  <a href ="web.html">web</a> -->
-
-<a href ="index.html"><img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%"></a>
-  <center><h1>Which Closet You Like to Open?
-  </h1></center>
-  <br>
-  <center><a href="Men_top_vs_bottom_m.html" class="button button1">Men Closet</a> <a href="women_top_vs_bottom_m.html" class="button button1">Women Closet</a></center>
-
-<br>
-<footer>
-  <center><p>
-  <a href="index.html" class="button button2">⬅<br></a><br>
-our closet©</p></center>
-</footer>
-<!-- <button type="button" onclick="init()">Start</button>
-<div id="webcam-container"></div>
-<div id="label-container"></div>
+  <title>our closet</title>
+  </head>
+  <body>
+  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
+  <center><button type="button" onclick="init()">Start Scanning</button>
+  <div id="label-container"></div>
+  <div id="webcam-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -35,7 +20,7 @@ our closet©</p></center>
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "./my_model/";
+    const URL = "./my_model_5/";
     var img;
     var img2;
     var img3;
@@ -75,26 +60,25 @@ our closet©</p></center>
         window.requestAnimationFrame(loop);
     }
 
+  
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
         const prediction = await model.predict(webcam.canvas);
-        if(prediction[0].className == "WhiteShirt" && prediction[0].probability.toFixed(2) == 1.00){
-          img2 = '<img src = "assets/cody2.png">';
-          labelContainer.childNodes[0].innerHTML = img2 + "With Hoodie, wear THIS"
-        } else if(prediction[1].className == "GrayShirt" && prediction[1].probability.toFixed(2) == 1.00){
-            img = '<img src = "assets/cody1.png">';
-          labelContainer.childNodes[0].innerHTML = img + "You have Bike Jacket, wear THIS"
+        if(prediction[0].className == "StripeShirt" && prediction[0].probability.toFixed(2) == 1.00){
+          img2 = '<img src = "assets/post11.png">';
+          labelContainer.childNodes[0].innerHTML = img2
+        } else if(prediction[1].className == "BlackShirt" && prediction[1].probability.toFixed(2) == 1.00){
+            img = '<img src = "assets/post16.png">';
+          labelContainer.childNodes[0].innerHTML = img
 
-        } else if(prediction[2].className == "HighNeckKnit" && prediction[2].probability.toFixed(2) == 1.00){
-            img3 = '<img src = "assets/cody3.png">';
-            labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-          } else if(prediction[3].className == "Hoodie" && prediction[3].probability.toFixed(2) == 1.00){
-              img3 = '<img src = "assets/cody3.png">';
-              labelContainer.childNodes[0].innerHTML = img3 +    "With that white shirt, wear THIS"
-            } else {
-              labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
-          }
+        } else if(prediction[2].className == "Vest" && prediction[2].probability.toFixed(2) == 1.00){
+            img3 = '<img src = "assets/post15.png">';
+          labelContainer.childNodes[0].innerHTML = img3
+
+          } else {
+                labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
+            }
 
         // for (let i = 0; i < maxPredictions; i++) {
         //     const classPrediction =
@@ -104,8 +88,12 @@ our closet©</p></center>
     }
 
 
-</script> -->
+</script>
 
-
+<footer>
+  <center><p>
+  <a href="women_top_vs_bottom_m.html" class="button button2">⬅<br></a><br>
+our closet©</p></center>
+</footer>
   </body>
   </html>
