--- a/men_jacket_m.html
+++ b/men_jacket_m.html
@@ -56,6 +56,18 @@
     }
 
 
+
+    function getConnectedDevices(type, callback) {
+    navigator.mediaDevices.enumerateDevices()
+        .then(devices => {
+            const filtered = devices.filter(device => device.kind === type);
+            callback(filtered);
+        });
+}
+
+getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
+
+
 async function loop() {
     webcam.update();
     await predict();
