--- a/men_top_m.html
+++ b/men_top_m.html
@@ -60,7 +60,16 @@
         await predict();
         window.requestAnimationFrame(loop);
     }
-  
+    function getConnectedDevices(type, callback) {
+        navigator.mediaDevices.enumerateDevices()
+            .then(devices => {
+                const filtered = devices.filter(device => device.kind === type);
+                callback(filtered);
+            });
+    }
+
+    getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
+
     // run the webcam image through the image model
     async function predict() {
         // predict can take in an image, video or canvas html element
