--- a/men_women.html
+++ b/men_women.html
@@ -17,7 +17,7 @@
   <center><h1>Which Closet You Like to Open?
   </h1></center>
   <br>
-  <center><a href="Men_top_vs_bottom_m.html" class="button button1">Men Closet</a> <a href="women_top_vs_bottom_m.html" class="button button1">Women Closet</a></center>
+  <center><a href="Men_top_vs_bottom.html" class="button button1">Men Closet</a> <a href="women_top_vs_bottom.html" class="button button1">Women Closet</a></center>
 
 <br>
 <footer>
