--- a/women_skirt_m.html
+++ b/women_skirt_m.html
@@ -60,7 +60,15 @@
         window.requestAnimationFrame(loop);
     }
 
-  
+    function getConnectedDevices(type, callback) {
+        navigator.mediaDevices.enumerateDevices()
+            .then(devices => {
+                const filtered = devices.filter(device => device.kind === type);
+                callback(filtered);
+            });
+    }
+
+    getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
 
     // run the webcam image through the image model
     async function predict() {
