--- a/men_jacket.html
+++ b/men_jacket.html
@@ -9,11 +9,10 @@
   <title>our closet</title>
 </head>
 <body>
-<img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
-<center><button type="button" onclick="init()">Start Scanning</button>
-<div id="label-container"></div>
-<div id="webcam-container"></div>
-
+  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
+  <center><button type="button" onclick="init()">Start Scanning</button>
+  <div id="label-container"></div>
+  <div id="webcam-container"></div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -55,25 +54,21 @@
         }
     }
 
-
+    async function loop() {
+        webcam.update(); // update the webcam frame
+        await predict();
+        window.requestAnimationFrame(loop);
+    }
 
     function getConnectedDevices(type, callback) {
-    navigator.mediaDevices.enumerateDevices()
-        .then(devices => {
-            const filtered = devices.filter(device => device.kind === type);
-            callback(filtered);
-        });
-}
+        navigator.mediaDevices.enumerateDevices()
+            .then(devices => {
+                const filtered = devices.filter(device => device.kind === type);
+                callback(filtered);
+            });
+    }
 
-getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
-
-
-async function loop() {
-    webcam.update();
-    await predict();
-    window.requestAnimationFrame(loop);
-
-}
+    getConnectedDevices('videoinput', cameras => console.log('Cameras found', cameras));
 
     // run the webcam image through the image model
     async function predict() {
@@ -88,8 +83,9 @@ async function loop() {
 
         } else if(prediction[2].className == "LongCoat" && prediction[2].probability.toFixed(2) == 1.00){
             img3 = '<img src = "assets/post2.png">';
-            labelContainer.childNodes[0].innerHTML = img3 +
-          }  else {
+          labelContainer.childNodes[0].innerHTML = img3
+
+        } else {
               labelContainer.childNodes[0].innerHTML = "What CAN I wear?"
           }
 
@@ -101,12 +97,12 @@ async function loop() {
     }
 
 
-</script></center>
+</script>
+
 <footer>
   <center><p>
   <a href="men_top_vs_bottom.html" class="button button2">⬅<br></a><br>
 our closet©</p></center>
 </footer>
-
   </body>
   </html>
