--- a/Men_top_vs_bottom_m.html
+++ b/Men_top_vs_bottom_m.html
@@ -22,7 +22,7 @@
 <br>
 <footer>
   <center><p>
-  <a href="men_women.html" class="button button2">⬅<br></a><br>
+  <a href="men_women_m.html" class="button button2">⬅<br></a><br>
 our closet©</p></center>
 </footer>
 <!-- <button type="button" onclick="init()">Start</button>
