--- a/men_top.html
+++ b/men_top.html
@@ -9,7 +9,7 @@
   <title>our closet</title>
 </head>
 <body>
-  <img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%">
+  <a href ="index.html"><img src="assets/webbanner.png" alt="clothe garmant" width="100%" height="100%"></a>
   <center><button type="button" onclick="init()">Start Scanning</button>
   <div id="label-container"></div>
   <div id="webcam-container"></div>
